--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,6 +41,9 @@ for:
     - node --version
     - yarn autoclean --force
     - yarn run clean
+  build_script:
+    - chmod +x ./scripts/*.sh
+    - ./scripts/linux_install_os_dependencies_for_testing_on_ubuntu.sh
   before_test:
     - yarn run lint
   test_script:
