--- a/appveyor.yml
+++ b/appveyor.yml
@@ -50,7 +50,6 @@ for:
   before_test:
     - yarn run lint
   test_script:
-    - yarn run unit
-    - yarn run e2e:impl
+    - ./scripts/linux_headless_all_tests.sh
   deploy: off
   configuration: Test
