revert back to original page timeout for CI. fix to branch for CI.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,6 +36,9 @@ for:
   matrix:
     only:
       - job_name: Macosx build
+  branches:
+    only:
+      - macosx
   install:
     - brew update && brew install yarn
     - yarn
