--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,12 +1,20 @@
 name: github-actions-to-ci-branches
-on: [push]
+on: [push, pull_request]
+  push:
+    branches:
+      - develop
+      - master
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
         with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+          ref: windows
+      -run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git stash
+        git merge develop
+        git commit --amend -m "Merged for Windows CI test."
+        git push
