correct github actions syntax.

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,7 +1,12 @@
 name: github-actions-to-ci-branches
-on: push
+on:
   push:
-    branches: ['develop', 'master']
+    branches:
+      - develop
+      - master
+  pull_request:
+    branches:
+      - '**'
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
