fix github actions syntax error.

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -8,13 +8,13 @@ on:
     branches:
       - '**'
 jobs:
-  check-bats-version:
+  merge-and-run-ci-windows:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
           ref: windows
-      -run: |
+      - run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
         git stash
