--- a/appveyor.yml
+++ b/appveyor.yml
@@ -65,7 +65,7 @@ for:
     - yarn run unit
   build: off
   deploy: off
-  configuration: Test
+  configuration: Default
 -
   matrix:
     only:
@@ -88,7 +88,7 @@ for:
     - yarn run unit
   build: off
   deploy: off
-  configuration: Test
+  configuration: Default
 -
   matrix:
     only:
@@ -111,6 +111,74 @@ for:
   test_script:
     - yarn run unit
   build: off
+  deploy: off
+  configuration: Default
+
+-
+  matrix:
+    only:
+      - job_name: Windows build
+  branches:
+    only:
+      - windows
+  init:
+    - git config --global core.autocrlf input
+  install:
+    - ps: Install-Product node $env:nodejs_version $env:plat
+    - choco upgrade yarn
+    - git reset --hard HEAD
+    - yarn
+    - node --version
+    - yarn autoclean --force
+    - yarn run clean
+  before_test:
+    - yarn run lint
+  test_script:
+    - yarn run unit
+    - yarn run e2e:impl
+  build: off
+  deploy: off
+  configuration: Test
+-
+  matrix:
+    only:
+      - job_name: Macosx build
+  branches:
+    only:
+      - macosx
+  install:
+    - brew update && brew install yarn
+    - yarn
+    - node --version
+    - yarn autoclean --force
+    - yarn run clean
+  before_test:
+    - yarn run lint
+  test_script:
+    - yarn run unit
+    - yarn run e2e:impl
+  build: off
+  deploy: off
+  configuration: Test
+-
+  matrix:
+    only:
+      - job_name: Linux build
+  branches:
+    only:
+      - linux
+  install:
+    - yarn
+    - node --version
+    - yarn autoclean --force
+    - yarn run clean
+  build_script:
+    - chmod +x ./scripts/*.sh
+    - ./scripts/linux_install_os_dependencies_for_testing_on_ubuntu.sh
+  before_test:
+    - yarn run lint
+  test_script:
+    - ./scripts/linux_headless_all_tests.sh
   deploy: off
   configuration: Test
 
@@ -192,4 +260,4 @@ for:
     - git push origin ci
   build: off
   deploy: off
-  configuration: Mergeandtest
+  configuration: TestAndReport
