--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           ref: windows
       - run: |
-          git checkout develop -- .
+          git checkout origin/develop -- .
           git commit -m "Merged for Windows CI test."
           git push
