--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -18,6 +18,6 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git fetch origin develop
-          git checkout origin/zdevelop -- .
+          git checkout origin/develop -- .
           git commit -m "Merged for Windows CI test."
           git push
