--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -21,3 +21,29 @@ jobs:
           git checkout origin/develop -- .
           git commit -m "Merged for Windows CI test."
           git push
+  merge-and-run-ci-linux:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: linux
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git fetch origin develop
+          git checkout origin/develop -- .
+          git commit -m "Merged for Linux CI test."
+          git push
+  merge-and-run-ci-macosx:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: macosx
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git fetch origin develop
+          git checkout origin/develop -- .
+          git commit -m "Merged for Macosx CI test."
+          git push
