--- a/appveyor.yml
+++ b/appveyor.yml
@@ -83,6 +83,7 @@ for:
   build_script:
     - chmod +x ./scripts/*.sh
     - ./scripts/linux_install_os_dependencies_for_testing_on_ubuntu.sh
+    - . ./scripts/linux_headless_xvfb_init.sh
   before_test:
     - yarn run lint
   test_script:
