Move windows full test into default.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,86 +42,9 @@ for:
       - job_name: Windows build
   branches:
     except:
-      - ci
-      - windows
       - macosx
       - linux
       - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
-  init:
-    - git config --global core.autocrlf input
-  install:
-    - ps: Install-Product node $env:nodejs_version $env:plat
-    - choco upgrade yarn
-    - git reset --hard HEAD
-    - yarn
-    - node --version
-    - yarn autoclean --force
-    - yarn run clean
-  before_test:
-    - yarn run lint
-  test_script:
-    - yarn run unit
-  build: off
-  deploy: off
-  configuration: Default
--
-  matrix:
-    only:
-      - job_name: Linux build
-  branches:
-    except:
-      - ci
-      - windows
-      - macosx
-      - linux
-      - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
-  install:
-    - yarn
-    - node --version
-    - yarn autoclean --force
-    - yarn run clean
-  build_script:
-    - chmod +x ./scripts/*.sh
-    - ./scripts/linux_install_os_dependencies_for_testing_on_ubuntu.sh
-    - . ./scripts/linux_headless_xvfb_init.sh
-  before_test:
-    - yarn run lint
-  test_script:
-    - yarn run unit
-  deploy: off
-  configuration: Default
--
-  matrix:
-    only:
-      - job_name: Macosx build
-  branches:
-    except:
-      - ci
-      - windows
-      - macosx
-      - linux
-      - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
-  install:
-    - brew update && brew install yarn
-    - yarn
-    - node --version
-    - yarn autoclean --force
-    - yarn run clean
-  before_test:
-    - yarn run lint
-  test_script:
-    - yarn run unit
-  build: off
-  deploy: off
-  configuration: Default
-
--
-  matrix:
-    only:
-      - job_name: Windows build
-  branches:
-    only:
-      - windows
   init:
     - git config --global core.autocrlf input
   install:
@@ -143,6 +66,54 @@ for:
     - git add test/cucumber_report.html test/cucumber_report.json README.md
     - git commit -m "appveyor Updating branch from appveyor build."
     - git push origin windows
+  build: off
+  deploy: off
+  configuration: Test
+-
+  matrix:
+    only:
+      - job_name: Linux build
+  branches:
+    except:
+      - windows
+      - macosx
+      - linux
+      - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+  install:
+    - yarn
+    - node --version
+    - yarn autoclean --force
+    - yarn run clean
+  build_script:
+    - chmod +x ./scripts/*.sh
+    - ./scripts/linux_install_os_dependencies_for_testing_on_ubuntu.sh
+    - . ./scripts/linux_headless_xvfb_init.sh
+  before_test:
+    - yarn run lint
+  test_script:
+    - yarn run unit
+  deploy: off
+  configuration: Test
+-
+  matrix:
+    only:
+      - job_name: Macosx build
+  branches:
+    except:
+      - windows
+      - macosx
+      - linux
+      - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+  install:
+    - brew update && brew install yarn
+    - yarn
+    - node --version
+    - yarn autoclean --force
+    - yarn run clean
+  before_test:
+    - yarn run lint
+  test_script:
+    - yarn run unit
   build: off
   deploy: off
   configuration: Test
