--- a/appveyor.yml
+++ b/appveyor.yml
@@ -65,7 +65,7 @@ for:
   on_success:
     - git add test/cucumber_report.html test/cucumber_report.json README.md
     - git commit -m "appveyor Updating branch from appveyor build."
-    - git push origin windows
+    - git push origin $env:APPVEYOR_REPO_BRANCH
   build: off
   deploy: off
   configuration: Test
