--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,18 +22,24 @@ jobs:
           git commit -m "Merged for Windows CI test."
           git push
   merge-and-run-ci-linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
+      - name: Linux
+        uses: actions/setup-node@v1
         with:
-          ref: linux
-      - run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git fetch origin develop
-          git checkout origin/develop -- .
-          git commit -m "Merged for Linux CI test."
-          git push
+          node-version: '14.x'
+          cache: 'yarn'
+      - name: Install dependencies
+        run: |
+          yarn
+          node --version
+          yarn autoclean --force
+          yarn run clean
+      - name: Lint
+        run: yarn run lint
+      - name: Test on Linux
+        run: yarn run unit
   merge-and-run-ci-macosx:
     runs-on: ubuntu-latest
     steps:
