Turn off webdriver IO verbose logging. Add CI test setup for Windows and Mac on github actions. Try windows with badge actions.

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,20 +8,36 @@ on:
     branches:
       - '**'
 jobs:
-  merge-and-run-ci-windows:
-    runs-on: ubuntu-latest
+  ci-windows:
+    runs-on: windows-2019
     steps:
       - uses: actions/checkout@v2
+      - name: Window
+        uses: actions/setup-node@v1
         with:
-          ref: windows
-      - run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git fetch origin develop
-          git checkout origin/develop -- .
-          git commit -m "Merged for Windows CI test."
-          git push
-  merge-and-run-ci-linux:
+          node-version: '14.x'
+          cache: 'yarn'
+      - name: Install dependencies
+        run: |
+          yarn
+          node --version
+          yarn autoclean --force
+          yarn run clean
+      - name: Lint
+        run: yarn run lint
+      - name: Test
+        run: |
+          yarn run unit
+          yarn run e2e:impl
+      - name: Post-test
+        run: yarn run cucumber:report:badge
+      - name: Post-test commit
+        run: |
+          git add test/cucumber_report.html test/cucumber_report.json README.md
+          git commit -m "github-actions Updating branch from github-actions build."
+          git push origin $GITHUB_REF_NAME
+
+  ci-linux:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -44,16 +60,24 @@ jobs:
           . ./scripts/linux_headless_xvfb_init.sh
           yarn run unit
           yarn run e2e:impl
-  merge-and-run-ci-macosx:
-    runs-on: ubuntu-latest
+  ci-macosx:
+    runs-on: macos-11
     steps:
       - uses: actions/checkout@v2
+      - name: Macosx
+        uses: actions/setup-node@v1
         with:
-          ref: macosx
-      - run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git fetch origin develop
-          git checkout origin/develop -- .
-          git commit -m "Merged for Macosx CI test."
-          git push
+          node-version: '14.x'
+          cache: 'yarn'
+      - name: Install dependencies
+        run: |
+          yarn
+          node --version
+          yarn autoclean --force
+          yarn run clean
+      - name: Lint
+        run: yarn run lint
+      - name: Test
+        run: |
+          yarn run unit
+          yarn run e2e:impl
