--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: ${{ matrix.node_version }}
           architecture: ${{ matrix.architecture }}
           cache: 'yarn'
-        run: |
+      - run: |
           yarn
           node --version
           yarn autoclean --force
