--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -35,10 +35,11 @@ jobs:
           node --version
           yarn autoclean --force
           yarn run clean
+          echo ${{ runner.os }}
       - name: Lint
         run: yarn run lint
       - name: Pre-test setup
-        if: ${{ startsWith(runner.os, 'ubuntu') }}
+        if: ${{ runner.os == 'ubuntu-18.04' }}
         run: |
           chmod +x ./scripts/*.sh
           . ./scripts/linux_headless_xvfb_init.sh
@@ -47,10 +48,10 @@ jobs:
           yarn run unit
           yarn run e2e:impl
       - name: Post-test
-        if: ${{ startsWith(runner.os, 'windows') }}
+        if: ${{ runner.os == 'windows-2019' }}
         run: yarn run cucumber:report:badge
       - name: Post-test commit
-        if: ${{ startsWith(runner.os, 'windows') }}
+        if: ${{ runner.os == 'windows-2019' }}
         run: |
           git add test/cucumber_report.html test/cucumber_report.json README.md
           git commit -m "github-actions Updating branch from github-actions build."
