--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,17 +19,13 @@ jobs:
           - macos-11
         node_version:
           - '14.x'
-        architecture:
-          - x64
-    name: OS  ${{ matrix.os }} - arch ${{ matrix.architecture }} with node ${{ matrix.node_version }}
+    name: OS  ${{ matrix.os }} with node ${{ matrix.node_version }}
     steps:
       - uses: actions/checkout@v2
       - name: Install
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node_version }}
-          architecture: ${{ matrix.architecture }}
-          cache: 'yarn'
       - run: |
           yarn
           node --version
@@ -39,7 +35,7 @@ jobs:
       - name: Lint
         run: yarn run lint
       - name: Pre-test setup
-        if: ${{ runner.os == 'ubuntu-18.04' }}
+        if: ${{ runner.os == 'Linux' }}
         run: |
           chmod +x ./scripts/*.sh
           . ./scripts/linux_headless_xvfb_init.sh
@@ -48,11 +44,9 @@ jobs:
           yarn run unit
           yarn run e2e:impl
       - name: Post-test
-        if: ${{ runner.os == 'windows-2019' }}
-        run: yarn run cucumber:report:badge
-      - name: Post-test commit
-        if: ${{ runner.os == 'windows-2019' }}
+        if: ${{ runner.os == 'Windows' }}
         run: |
+          yarn run cucumber:report:badge
           git add test/cucumber_report.html test/cucumber_report.json README.md
           git commit -m "github-actions Updating branch from github-actions build."
           git push origin $GITHUB_REF_NAME
