Corrected github-actions syntax. Updated main yml filename. Added 'skip' to commit (following: https://github.blog/changelog/2021-02-08-github-actions-skip-pull-request-and-push-workflows-with-skip-ci/).

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout Windows
         if: ${{ runner.os == 'Windows' }}
         uses: actions/checkout@v2
-        run: git config --global core.autocrlf input
+      - run: git config --global core.autocrlf input
       - name: Checkout Default
         if: ${{ runner.os != 'Windows' }}
         uses: actions/checkout@v2
@@ -58,5 +58,5 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add test/cucumber_report.html test/cucumber_report.json README.md
-          git commit -m "github-actions Updating branch from github-actions build."
+          git commit -m "[skip actions] Updating branch from github-actions 'Post-test' actions."
           git push origin $GITHUB_REF_NAME
